@@ -6,6 +6,8 @@ Next release
 
 - Corrected argparse dependency (fixes Python 2.7 builds)
 
+- lp.1063834: Allow a pgtextindex.maxlen option.
+
 1.17 (2012-08-30)
 -----------------
 
